[package]
name = "parthia"
version = "0.1.0"
authors = ["Nicholas Miklaucic <nicholas.miklaucic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parthia-lib = { path = "parthia-lib", version = "0.1.0"}
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.123", features=["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.8.2"
