[package]
name = "parthia-server"
version = "0.1.0"
authors = ["Nicholas Miklaucic <nicholas.miklaucic@gmail.com>"]
edition = "2018"
description = "Fire Emblem calculations in Rust, the server edition"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicholas-miklaucic/parthia-server"
readme = "README.md"
keywords = ["mathematics", "http", "fun"]
categories = ["mathematics", "web-programming::http-server"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parthia = { version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0.123", features=["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.8.2"
